--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>shuaicj.example.persist</groupId>
-    <artifactId>persist-example-parent</artifactId>
+    <artifactId>spring-data-examples</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
